--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,18 +1,21 @@
 @font-face {
-    font-family: 'PD-Bold';
+    font-family: 'PD';
     font-weight: 700;
     font-display: swap;
     src: url('../fonts/PlayfairDisplaySC/PlayfairDisplaySC-Bold.woff2') format('woff2'),
 }
 
 @font-face {
-    font-family: 'SSP-Regular';
+    font-family: 'SSP';
     font-display: swap;
+    font-weight: 400;
+    font-style: normal;
     src: url('../fonts/SourceSansPro/SourceSansPro-Regular.woff2') format('woff2'),
 }
 
 @font-face {
-    font-family: 'SSP-Semibold';
+    font-family: 'SSP';
     font-display: swap;
+    font-weight: 600;
     src: url('../fonts/SourceSansPro/SourceSansPro-SemiBold.woff2') format('woff2'),
 }
