--- a/styles/typography.css
+++ b/styles/typography.css
@@ -10,8 +10,15 @@ img {
     height: auto;
 }
 
-button {
-    background-color: #726D67;
+.special-offer-banner {
+    background-size: 20px;
+    background-color: goldenrod;
+    font-family: 'SSP';
+    text-align: center;
+}
+
+.button {
+    background-color: #726d6c;
     cursor: pointer;
     width: 203px;
     height: 52px;
@@ -20,7 +27,8 @@ button {
     padding: 12px 18px;
 
     color: #E0DEDA;
-    font-family: 'SSP-Semibold', Arial, sans-serif;
+    font-family: 'SSP', Arial, sans-serif;
+    font-weight: 600;
     font-size: 20px;
     
 }
