--- a/styles/typography.css
+++ b/styles/typography.css
@@ -30,5 +30,17 @@ img {
     font-family: 'SSP', Arial, sans-serif;
     font-weight: 600;
     font-size: 20px;
-    
+/* for elem states */
+    transition: background-color 0.3s,
+    color 0.3s;
+}
+
+
+.button:hover {
+background-color: #162126;
+color: #ffffff;
+}
+.button:active {
+background-color: #E0DEDA;
+color: #ffffff;
 }
