--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -19,3 +19,10 @@
     font-weight: 600;
     src: url('../fonts/SourceSansPro/SourceSansPro-SemiBold.woff2') format('woff2'),
 }
+
+@font-face {
+    font-family: 'Mont';
+    font-display: swap;
+    font-weight: 400;
+    src: url('../fonts/Montserrat-Regular.woff2');
+}
