--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@
 html,
 
 body {
-    font-family: 'SSP', Arial, sans-serif;
+    font-family: 'Mont', Arial, sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 130%;
