--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
     gap: 20px; /* Расстояние между элементами */
 }
 
+
 /* Стили для aside */
 .aside {
     margin-top: 50px;
@@ -56,6 +57,7 @@
 }
 
 
+
 .aside__additional {
     padding-left: 0%;
     list-style-type: none;
@@ -66,7 +68,7 @@
 }
 .aside__additional__link {
     color: #162126;
-    font-family: 'SSP', Arial, Helvetica, sans-serif;
+    font-family: 'Mont', Arial, Helvetica, sans-serif;
     font-size: larger;
     text-decoration: none;
     display: flex;
@@ -199,7 +201,7 @@
     background-size: cover;
 }
 .appearance__description {
-    font-family: 'SSP', Arial, sans-serif;
+    font-family: 'Mont', Arial, sans-serif;
     font-size: large;
     font-weight: 600;
 }
