--- a/styles/typography.css
+++ b/styles/typography.css
@@ -13,7 +13,7 @@ img {
 .special-offer-banner {
     background-size: 20px;
     background-color: goldenrod;
-    font-family: 'SSP';
+    font-family: 'Mont';
     text-align: center;
 }
 
