--- a/styles/typography.css
+++ b/styles/typography.css
@@ -27,7 +27,7 @@ img {
     padding: 12px 18px;
 
     color: #E0DEDA;
-    font-family: 'SSP', Arial, sans-serif;
+    font-family: 'Mont', Arial, sans-serif;
     font-weight: 600;
     font-size: 20px;
 /* for elem states */
