--- a/styles/main.css
+++ b/styles/main.css
@@ -95,6 +95,46 @@
     flex-direction: column;
     margin-top: 50px;
 }
+
+ /* для JS плавных переходов */
+.reasons__img,
+.reasons__text,
+.reasons__description {
+    transition: opacity 0.8s ease-in-out;
+}
+
+.reasons__details {
+    position: relative; /* Важно для позиционирования */
+}
+
+.fade-in {
+    animation: fadeIn 0.3s ease-in-out;
+}
+
+.fade-out {
+    animation: fadeOut 0.3s ease-in-out;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
+}
+
 .reasons__list {
     display: flex;
     list-style: none; /* Убираем стандартные маркеры списка */
